feat: scope dictionaries by application
